--- a/_posts/2018-09-29-antolin.md
+++ b/_posts/2018-09-29-antolin.md
@@ -31,7 +31,7 @@ Bei **Biblino** finden Sie hierzu jetzt neue Links:
 
 {% include lightcase.html group="bilder-dieser-seite"
       src="/images/2018-09-29-antolin/antolin-biblino-start.png" 
-      title="Stöbern nach Lesealter in unserer App" %}    
+      title="Stöbern nach Lesealter in Biblino" %}    
 
 Die "Expertensuche" von Biblino erlaubt auch eine Verknüpfung mit anderen Suchkriterien. Wählen Sie hier unter "Schlagworte" z.B. "ANTOLIN 1" (="1. Klasse") aus und füllen Sie je nach Bedarf die anderen Suchfelder aus.
       
@@ -52,7 +52,7 @@ Bei **Biblino** sieht das so aus:
 
 {% include lightcase.html group="bilder-dieser-seite"
       src="/images/2018-09-29-antolin/antolin-biblino-details.png" 
-      title="Biblino: Detail-Ansicht der App, mit Antolin-Schlagwort" %}
+      title="Biblino: Detail-Ansicht mit Antolin-Schlagwort" %}
 
 Finden Sie unter "Schlagwörter" eine Angabe wie "ANTOLIN 1", "ANTOLIN 2", "ANTOLIN ab 7", so ist das als Antolin-Lesealtersempfehlung zu interpretieren. "ANTOLIN 2" bedeutet dann "geeignet für Schüler der 2. Klasse".
 
