--- a/_posts/2019-12-15-ferien.md
+++ b/_posts/2019-12-15-ferien.md
@@ -12,4 +12,4 @@ In der Zeit "zwischen den Jahren" bleibt unsere Bücherei geschlossen. Die letzt
 
 Wir wünschen allen Leserinnen und Lesern erholsame Feiertage und alles Gute für 2020!
 
-Euer Büchereieteam
+Euer Büchereiteam
