--- a/_posts/2020-03-16-corona.md
+++ b/_posts/2020-03-16-corona.md
@@ -5,7 +5,7 @@ categories: Termine
 author: "burkhard"
 published: yes
 ---
-Aufgrund der bekannten Lage bei der Ausbreitung des Coronavirus bleibt unsere Bücherei leider bis auf weiteres geschlossen.
+Aufgrund der bekannten Lage bei der Ausbreitung des Coronavirus bleibt unsere Bücherei leider ab sofort und bis auf weiteres geschlossen.
 Unsere **Malaktion für Kinder** führen wir online fort! Schickt uns weiterhin Eure schönsten Bilder, eingescannt per [E-Mail](/der-weg-zu-uns/#e-mail-adresse), wir veröffentlichen sie weiter hier auf der Homepage!
 
 Das Formular gibt es hier zum Download:
