Bilder von Mia und Ina

--- a/_posts/2020-03-16-corona.md
+++ b/_posts/2020-03-16-corona.md
@@ -6,7 +6,7 @@ author: "burkhard"
 published: yes
 ---
 Aufgrund der bekannten Lage bei der Ausbreitung des Coronavirus bleibt unsere Bücherei leider ab sofort und bis auf weiteres geschlossen.
-Unsere **Malaktion für Kinder** führen wir online fort! Schickt uns weiterhin Eure schönsten Bilder, eingescannt per [E-Mail](/der-weg-zu-uns/#e-mail-adresse), wir veröffentlichen sie weiter hier auf der Homepage!
+Unsere **Malaktion für Kinder** führen wir online fort! Schickt uns weiterhin Eure schönsten Bilder, eingescannt oder abfotografiert per [E-Mail](/der-weg-zu-uns/#e-mail-adresse), wir veröffentlichen sie weiter hier auf der Homepage!
 
 Das Formular gibt es hier zum Download:
 [Buchbewertung mit Platz zum Malen](/images/2018-11-15-vorleseaktion/BildZumBuchMalen.pdf)
