--- a/_posts/2020-08-01-Leseclub.md
+++ b/_posts/2020-08-01-Leseclub.md
@@ -11,7 +11,7 @@ Zum ersten Mal in der Geschichte unserer Bücherei gibt es dieses Jahr den **Som
       title="Exklusiv für unseren Leseclub neu erworbene Bücher" %}
 
 
-Es haben sich insgesamt 24 Kinder angemeldet. Dabei gelten folgende Bedingungen
+Es haben sich insgesamt 24 Kinder angemeldet. Dabei gelten folgende Bedingungen:
 * Alle Kinder, die während den Sommerferien mindestens ein Buch lesen und bewerten, erhalten von uns eine Urkunde.
 * Wer drei oder auch mehr Bücher liest und unseren Bewertungsbogen ausfüllt, hat die Chance auf tolle Gewinne bei unserer Abschlussparty, die nach den Sommerferien (voraussichtlich am 25. September) stattfinden soll.
 
