copy/paste-Fehler

--- a/_posts/2020-08-01-Leseclub.md
+++ b/_posts/2020-08-01-Leseclub.md
@@ -8,7 +8,7 @@ Zum ersten Mal in der Geschichte unserer Bücherei gibt es dieses Jahr den **Som
 {% include lightcase.html group="bilder-dieser-seite"
       src="/images/2020-08-01-leseclub/logo-klein.png" 
       big="/images/2020-08-01-leseclub/logo.png" 
-      title="Exklusiv für unseren Leseclub neu erworbene Bücher" %}
+      title="Logo unseres Leseclubs" %}
 
 
 Es haben sich insgesamt 24 Kinder angemeldet. Dabei gelten folgende Bedingungen:
