--- a/_posts/2020-08-01-Leseclub.md
+++ b/_posts/2020-08-01-Leseclub.md
@@ -3,6 +3,7 @@ layout: post
 title: 'Aktion: Sommerferien-Leseclub'
 categories: Aktionen
 author: "micha"
+published: no
 ---
 Zum ersten Mal in der Geschichte unserer Bücherei gibt es dieses Jahr den **Sommerferien-Leseclub**! Dazu haben wir alle Kinder von der 1. bis zur 6. Klasse, die bereits Mitglied in unserer Bücherei sind, eingeladen, mitzumachen.
 {% include lightcase.html group="bilder-dieser-seite"
