--- a/_posts/2021-01-04-Neujahr.md
+++ b/_posts/2021-01-04-Neujahr.md
@@ -5,7 +5,7 @@ categories: Termine
 author: "burkhard"
 published: yes
 ---
-Wir wünschen allen unseren Bücherfreunden alles Gute fürs Neue Jahr! Unser kontaktloser **Abhol- und Bringdienst** ist vor Weihnachten auf regen Zuspruch gestoßen. Schön, dass Ihr uns auch unter diesen Umständen treu bleibt. Wir machen also weiter! 
+Wir wünschen allen unseren Bücherfreunden alles Gute fürs Neue Jahr! Unser kontaktloser **Abhol- und Bringdienst** ist vor Weihnachten auf regen Zuspruch gestoßen. Schön, dass Ihr uns auch unter diesen Umständen treu bleibt. Wir machen also auch 2021 weiter - **ab dem 5. Januar**! 
 {% include lightcase.html group="bilder-dieser-seite"
       big="/images/Termine/Neujahr.png" 
       src="/images/Termine/Neujahr_klein.png"  
