--- a/_posts/2021-03-11-Oeffnung.md
+++ b/_posts/2021-03-11-Oeffnung.md
@@ -4,11 +4,20 @@ title: 'Wir öffnen wieder!'
 categories: Termine
 author: "burkhard"
 published: yes
+date: 2021-03-14
 ---
 Da unsere Bücherei im Rahmen der aktuellen Corona-Lockerungsphase wieder öffnen darf, **stellen wir unseren Bringservice nun ein**. Wir freuen uns, dass Ihr uns nun wieder in unseren Räumlichkeiten besuchen dürft. 
 Ab **Dienstag, 16.03.2021** erwarten wir Euch wieder in unserer Bücherei! 
+Wir dürfen **unabhängig vom Inzidenzwert** öffnen - die derzeitige Verordnung gilt momentan bis 28. März 2021.
+Folgende **Voraussetzungen** müssen eingehalten werden:
 
-Die Öffnungszeiten sind wie gehabt: dienstags von 18.30 bis 19.30 Uhr und donnerstags von 15.30 bis 17.00 Uhr. Bitte denkt an die **FFP2-Maske** und habt Verständnis,  wenn  es  zu  kurzen  Wartezeiten kommt. Natürlich sind in den letzten drei Monaten auch wieder einige neue Bücher bei uns eingezogen. Die Neuanschaffungen findet Ihr wie immer aktuell im [Online-Katalog](https://www.biblino.de/westerheim) - heute hinzugekommen ist z.B. eine Auswahl neuer **Hörbücher**.
+* In den Büchereiräumen und im Wartebereich davor gilt für das Personal Maskenpflicht und für die Besucher und ihre Begleitpersonen **FFP2-Maskenpflicht**. 
+* Für **Kinder** zwischen dem 6. und 15. Lebensjahr gilt nur die **einfache Maskenpflicht**.
+* Es dürfen sich **höchstens fünf Personen** in unserem Büchereiraum  aufhalten - plus ein Mitarbeiter
+* Der Personenabstand muss mindestens 1,5 m betragen
+* Sowohl Besucher als auch Personal sollen sich die Hände desinfizieren
+
+Die Öffnungszeiten sind wie gehabt: dienstags von 18.30 bis 19.30 Uhr und donnerstags von 15.30 bis 17.00 Uhr. Bitte denkt also an Eure **FFP2-Maske** und habt Verständnis,  wenn  es  zu  kurzen  Wartezeiten kommt. Natürlich sind in den letzten drei Monaten **viele neue Bücher** bei uns eingezogen. Die Neuanschaffungen findet Ihr wie immer aktuell im [Online-Katalog](https://www.biblino.de/westerheim) - zuletzt hinzugekommen ist z.B. eine Auswahl neuer **Hörbücher**.
 
 Wir freuen uns auf Euren Besuch!
 
