--- a/_posts/2021-07-15-tonies.md
+++ b/_posts/2021-07-15-tonies.md
@@ -6,6 +6,9 @@ author: "burkhard"
 published: yes
 date: 2021-07-15
 ---
+{% include lightcase.html group="bilder-dieser-seite"
+      src="/images/mediacovers/x320/10210001.jpg" 
+      title="Eine Woche voller Samstage" %}
 In vielen Kindernzimmern findet sich heute eine [Toniebox](https://tonies.com/de-de/toniebox/) - ein Abspielgerät für Hörbücher, das auch für kleinere Kinder leicht zu bedienen ist. Die "Hörbücher" sind in Form von Figuren erhältlich, die dem jeweiligen Inhalt entstammen (z.B. die "Kleine Hexe" oder der "Drache Kokosnuss"). Stellt man die Tonie-Figur auf die Toniebox, lädt diese das Hörbuch aus dem Internet und spielt es ab. Für viele Eltern und Kinder eine bessere Alternative zu Fernseher oder Tablet.
 
 Alle Besitzer einer solchen Toniebox werden sich freuen, dass der [Michaelsbund](https://www.michaelsbund.de/) - der Dachverband unserer Bücherei - uns **bis Oktober 2021** zwanzig solcher Tonies leihweise zur Verfügung gestellt hat. Sie sind in unserem Online-Katalog (als "CDs") erfasst (einfach nach [tonies](https://www.biblino.de/index.php?stichwort=tonies&button=Suchen&rdb_and_or=and&searchmode=0&page=1&action=1&new_query=1&id=243) suchen) und können wie alle anderen Medien ausgeliehen werden. Die Toniebox kann auch gerne bei uns in der Bücherei vorgeführt werden.
