--- a/_posts/2021-09-05-zugang-3g.md
+++ b/_posts/2021-09-05-zugang-3g.md
@@ -13,7 +13,7 @@ Die [neueste Corona-Verordnung des Landes Bayern](https://www.verkuendung-bayern
 
 # Maskenpflicht
 
-Es gilt die Pflicht zum Tragen einer Maske, ausreichend ist eine medizinische Maske (OP-Maske) in allen öffentlichen Innenräumen.
+Es gilt die Pflicht zum Tragen einer Maske, ausreichend ist eine medizinische Maske (**OP-Maske**) in allen öffentlichen Innenräumen (keine FFP2-Maske mehr nötig!).
 Die Maske darf an festen Sitz- oder Arbeitsplätzen abgenommen werden, sobald ein Abstand von 1,5 m eingehalten werden kann.  Kinder bis zum 6. Geburtstag sind von der Maskenpflicht befreit
 
 # 3G-Regel
