--- a/_posts/2021-09-05-zugang-3g.md
+++ b/_posts/2021-09-05-zugang-3g.md
@@ -9,7 +9,7 @@ date: 2021-09-05
 {% include lightcase.html group="bilder-dieser-seite"
       src="/images/2021-09-05-3g/3g.png" 
       title="3G-Regel für Büchereien" %}
-Die [neueste Corona-Verordnung des Landes Bayern](https://www.verkuendung-bayern.de/files/baymbl/2021/615/baymbl-2021-615.pdf) führt für Büchereien ab dem 2. September die bereits von Friseuren, Restaurants, Kinos usw. bekannte **3G-Regel** ein, sobald die Inzidenz über den Wert **35** steigt (am 05.09. betrug der Wert im Unterallgäu **110,2**). Bitte beachtet also, dass **ohne einen der drei Nachweise** "geimpft" "genesen", oder "getestet" **der Zugang zur Bücherei Westerheim nicht erlaubt ist**. Neben der Einführung von "3G" gibt es aber auch einige Erleichterungen. Zu den Änderungen, die unsere Bücherei betreffen, im Einzelnen:
+Die [neueste Corona-Verordnung des Landes Bayern](https://www.verkuendung-bayern.de/files/baymbl/2021/615/baymbl-2021-615.pdf) führt für Büchereien ab dem 2. September die bereits von Friseuren, Restaurants, Kinos usw. bekannte **3G-Regel** ein, sobald die Inzidenz über den Wert **35** steigt (am 05.09. betrug der [Wert im Unterallgäu](https://www.landratsamt-unterallgaeu.de/buergerservice/gesundheit/coronavirus) **110,2**). Bitte beachtet also, dass **ohne einen der drei Nachweise** "geimpft" "genesen", oder "getestet" **der Zugang zur Bücherei Westerheim nicht erlaubt ist**. Neben der Einführung von "3G" gibt es aber auch einige Erleichterungen. Zu den Änderungen, die unsere Bücherei betreffen, im Einzelnen:
 
 # Maskenpflicht
 
