--- a/_posts/2021-09-05-zugang-3g.md
+++ b/_posts/2021-09-05-zugang-3g.md
@@ -3,7 +3,7 @@ layout: post
 title: 'Neue Corona-Verordnung: 3G-Regel in Büchereien'
 categories: Termine
 author: "burkhard"
-published: yes
+published: no
 date: 2021-09-05
 ---
 {% include lightcase.html group="bilder-dieser-seite"
