--- a/_posts/2024-07-23-Leseclub.md
+++ b/_posts/2024-07-23-Leseclub.md
@@ -8,20 +8,19 @@ published: yes
 Liebe Mädels, liebe Jungs,
 \\
 \\
-die Sommerferien stehen vor der Tür und weil das Lesen fürs ganze Leben sooo wichtig ist und ja auch Spaß machen kann, laden wir Dich ein, bei unserem 
+die Sommerferien stehen vor der Tür und weil das Lesen fürs ganze Leben sooo wichtig ist und ja auch Spaß macht, laden wir Dich ein, bei unserem 
 **5. SOMMERFERIEN-LESECLUB** mitzumachen. Auch in diesem Jahr kannst Du Deine
 Buch-Bewertungen über ein extra für unsere Bücherei angelegtes ANTOLIN-Leseprogramm abgeben. **HAST DU (WIEDER) LUST MITZUMACHEN?** 
 Wir würden uns freuen!
 
-Unser SOMMERFERIEN-LESECLUB funktioniert so:
-- zuerst musst Du die beiliegende Anmeldekarte ausfüllen und mit Deine   Unterschrift bestätigen, dass Du mitmachen willst 
-  - dann laden wir Dich am **Donnerstag, 25. Juli um 18.00 Uhr** zu einem ersten Treffen in unsere Bücherei ein (es gibt Infos und ihr könnt ausleihen)
+Unser **SOMMERFERIEN-LESECLUB** funktioniert so:
+- zuerst musst Du die Anmeldekarte, die wir Dir in den Briefkasten geworfen haben, ausfüllen und mit Deiner Unterschrift bestätigen, dass Du mitmachen willst 
+- dann laden wir Dich am **Donnerstag, 25. Juli um 18.00 Uhr** zu einem ersten Treffen in unsere Bücherei ein (es gibt Infos und ihr könnt ausleihen)
 -  wer mindestens drei Bücher (oder gerne auch mehr) liest und dazu mit dem ANTOLIN-  Leseprogramm die Fragen beantwortet, hat die Chance einen Preis zu gewinnen
 
 Wir verlosen wie immer Gutscheine, Buchpreise und verschiedene tolle Sachpreise.
 -  Zusätzlich sind je nach Interesse zwei kleine Veranstaltungen in der Bücherei geplant 
 -  Nach den Sommerferien ist eine Abschlussparty mit Verlosung der Preise geplant.
-
 
 **GANZ WICHTIG - ANMELDESCHLUSS: kommenden Mittwoch, 24. JULI 2024**
 
