--- a/_posts/2024-07-23-Leseclub.md
+++ b/_posts/2024-07-23-Leseclub.md
@@ -2,7 +2,7 @@
 layout: post
 title: 'Sommerferien-Leseclub 2024'
 categories: Termine
-author: "burkhard"
+author: "micha"
 published: yes
 ---
 Liebe Mädels, liebe Jungs,
