--- a/_posts/2025-03-23-tonies.md
+++ b/_posts/2025-03-23-tonies.md
@@ -3,7 +3,7 @@ layout: post
 title: 'Neue Tonies in unserer Bücherei'
 categories: Aktionen
 author: "burkhard"
-published: yes
+published: no
 date: 2025-03-23
 ---
 {% include lightcase.html group="bilder-dieser-seite"
@@ -11,7 +11,7 @@ date: 2025-03-23
       title="Tonies: Das Klo" %}
 In vielen Kinderzimmern findet sich heute eine [Toniebox](https://tonies.com/de-de/toniebox/) - ein Abspielgerät für Hörbücher, das auch für kleinere Kinder leicht zu bedienen ist. Die "Hörbücher" sind in Form von Figuren erhältlich, die dem jeweiligen Inhalt entstammen (z.B. die "Kleine Hexe" oder der "Drache Kokosnuss"). Stellt man die Tonie-Figur auf die Toniebox, lädt diese das Hörbuch aus dem Internet und spielt es ab. Für viele Eltern und Kinder eine bessere Alternative zu Fernseher oder Tablet.
 
-Alle Besitzer einer solchen Toniebox werden sich freuen, dass der [Michaelsbund](https://www.michaelsbund.de/) - der Dachverband unserer Bücherei - uns **bis Oktober 2021** zwanzig solcher Tonies leihweise zur Verfügung gestellt hat. Sie sind in unserem Online-Katalog (als "CDs") erfasst (einfach nach [tonies](https://www.biblino.de/index.php?stichwort=tonies&button=Suchen&rdb_and_or=and&searchmode=0&page=1&action=1&new_query=1&id=243) suchen) und können wie alle anderen Medien ausgeliehen werden. Die Toniebox kann auch gerne bei uns in der Bücherei vorgeführt werden.
+Alle Besitzer einer solchen Toniebox werden sich freuen, dass der [Michaelsbund](https://www.michaelsbund.de/) - der Dachverband unserer Bücherei - uns **bis Juli 2025** zwanzig solcher Tonies leihweise zur Verfügung gestellt hat. Sie sind in unserem Online-Katalog (als "CDs") erfasst (einfach nach [tonies](https://www.biblino.de/index.php?stichwort=tonies&button=Suchen&rdb_and_or=and&searchmode=0&page=1&action=1&new_query=1&id=243) suchen) und können wie alle anderen Medien ausgeliehen werden. Die Toniebox kann auch gerne bei uns in der Bücherei vorgeführt werden.
 
 Ein paar Beispiele:
 {% include biblino_link.html title="Die kleine Hexe" media_num="10210016" with_cover="yes" %}
