--- a/_posts/2025-03-23-tonies.md
+++ b/_posts/2025-03-23-tonies.md
@@ -3,21 +3,25 @@ layout: post
 title: 'Neue Tonies in unserer Bücherei'
 categories: Aktionen
 author: "burkhard"
-published: no
+published: yes
 date: 2025-03-23
 ---
 {% include lightcase.html group="bilder-dieser-seite"
       src="/images/mediacovers/x320/10250002.jpg" 
       title="Tonies: Das Klo" %}
-In vielen Kinderzimmern findet sich heute eine [Toniebox](https://tonies.com/de-de/toniebox/) - ein Abspielgerät für Hörbücher, das auch für kleinere Kinder leicht zu bedienen ist. Die "Hörbücher" sind in Form von Figuren erhältlich, die dem jeweiligen Inhalt entstammen (z.B. die "Kleine Hexe" oder der "Drache Kokosnuss"). Stellt man die Tonie-Figur auf die Toniebox, lädt diese das Hörbuch aus dem Internet und spielt es ab. Für viele Eltern und Kinder eine bessere Alternative zu Fernseher oder Tablet.
+In der Vergangenheit hat uns der [Michaelsbund](https://www.michaelsbund.de/) - der Dachverband unserer Bücherei -
+bereits mehrmals einige *Tonies* als Leihgabe zur Verfügung gestellt. Wir freuen uns darüber, ab sofort
+und **bis Juli 2025** erneut eine Auswahl neuer Tonies anbieten zu können.
 
-Alle Besitzer einer solchen Toniebox werden sich freuen, dass der [Michaelsbund](https://www.michaelsbund.de/) - der Dachverband unserer Bücherei - uns **bis Juli 2025** zwanzig solcher Tonies leihweise zur Verfügung gestellt hat. Sie sind in unserem Online-Katalog (als "CDs") erfasst (einfach nach [tonies](https://www.biblino.de/index.php?stichwort=tonies&button=Suchen&rdb_and_or=and&searchmode=0&page=1&action=1&new_query=1&id=243) suchen) und können wie alle anderen Medien ausgeliehen werden. Die Toniebox kann auch gerne bei uns in der Bücherei vorgeführt werden.
+Benötigt wird zum Abspielen eine [Toniebox](https://tonies.com/de-de/toniebox/) - ein Abspielgerät für Hörbücher, das auch für kleinere Kinder leicht zu bedienen ist. Die "Hörbücher" sind in Form von Figuren erhältlich, die dem jeweiligen Inhalt entstammen (z.B. die "Kleine Hexe" oder der "Drache Kokosnuss"). Stellt man die Tonie-Figur auf die Toniebox, lädt diese das Hörbuch aus dem Internet und spielt es ab. Für viele Eltern und Kinder eine bessere Alternative zu Fernseher oder Tablet.
+
+Sie sind in unserem Online-Katalog (als "CDs") erfasst (einfach nach [tonies](https://www.biblino.de/index.php?stichwort=tonies&button=Suchen&rdb_and_or=and&searchmode=0&page=1&action=1&new_query=1&id=243) suchen) und können wie alle anderen Medien ausgeliehen werden. Die Toniebox kann auch gerne bei uns in der Bücherei vorgeführt werden.
 
 Ein paar Beispiele:
-{% include biblino_link.html title="Die kleine Hexe" media_num="10210016" with_cover="yes" %}
-{% include biblino_link.html title="(M)auserlesene Lieder" media_num="10210014" with_cover="yes" %}
-{% include biblino_link.html title="Ella in der Schule" media_num="10210002" with_cover="yes" %}
-{% include biblino_link.html title="5 Lieblings-Märchen" media_num="10210018" with_cover="yes" %}
+{% include biblino_link.html title="Der Räuber Hotzenplotz" media_num="10250011" with_cover="yes" %}
+{% include biblino_link.html title="Lichterkinder; Die besten Spiel- und Bewegungslieder" media_num="10250007" with_cover="yes" %}
+{% include biblino_link.html title="Frederick und seine Mäusefreunde" media_num="10250014" with_cover="yes" %}
+{% include biblino_link.html title="Erdbeerinchen Erdbeerfee " media_num="10250016" with_cover="yes" %}
 
 Wir wünschen viel Spaß beim Aussuchen und Anhören!
 
